fix: make `URLToStringConversion` generate `URI.create(String).toURL()` instead of `new URL(String)`